# laspy

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  LasReader.py  MANIFEST.in  README.md  README.rst  noxfile.py  publish.sh  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: build.yml
benches/: test_benches.py
doc/: Makefile
doc/source/: .index.rst.swp  .tutorial.rst.swp  base.rst  conf.py  file.rst  header.rst  index.rst  laspy_tools.rst  source.rst  util.rst  (+5 more)
docs/: Makefile  basic.rst  complete_tutorial.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  intro.rst  lessbasic.rst  migration.rst  waveform.rst
examples/: copc.py  field-randomizer.py  recursive-split.py
laspy/: .base.py.swp  __init__.py  _pointappender.py  _pointreader.py  _pointwriter.py  base.py  compression.py  copc.py  errors.py  extradims.py  file.py  glviewer.py  header.py  lasappender.py  lasdata.py  lasfwreader.py  lasmmap.py  lasreader.py  laswriter.py  lib.py  lib.pyi  typehints.py  util.py  utils.py  waveform.py
laspytest/: __init__.py  test_laspy.py
misc/: bad_points.py  file_copy1.py  file_copy2.py  file_copy3.py  file_verify.py  format_translation.py  profiler.py  profiler2.py  select_classification.py  test_shell.py
test/: __init__.py  test_append_mode.py  test_common.py  test_creation.py  test_header.py  test_laspy.py  test_modif_1_2.py  test_modif_1_4.py  test_point_format.py  test_reading_1_2.py  test_reading_1_4.py  test_vlrs.py  v13-output.las  vegetation_1_3.las
tests/: 1_4_w_evlr.las  1_4_w_evlr.laz  conftest.py  extra.laz  fuck.laz  plane.laz  simple.laz  simple1_1.las  test_1_5.py  test_append_mode.py  test_chunk_read_write.py  test_common.py  test_constants.py  test_conversion.py  test_copc.py  test_creation.py  test_crs.py  test_extrabytes.py  test_field_views.py  test_fullwave.py  test_header.py  test_las_1_1.py  test_lasdata_write_waveform.py  test_lasfwreader.py  test_laspy.py  test_lasreader_waveform.py  test_mmap.py  test_modif_1_2.py  test_modif_1_4.py  test_non_seekable.py  test_point_format.py  test_point_record.py  test_point_record_waveformstate.py  test_reading_1_2.py  test_reading_1_4.py  test_vlrs.py  test_wave_reader.py  test_waveform.py
tools/: file_verify.py  lascopy.py  lasexplorer.py
v2/: __init__.py  base.py  file.py  header.py  test.py
(+77 files in other folders)
